# fastipca

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.css
examples/: grunfeld.ipynb  grunfeld.py
src/fastipca/: __init__.py  fastipca.py
tests/: test_ipca.py
