[metadata]
name = fastipca
version = 0.0.1
license = MIT
description = Instrumented Principal Components Analysis
long_description = file: README.md
author = 0x0L
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   opt_einsum
   scipy

[options.packages.find]
where=src
